--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -1,13 +1,10 @@
-@media (min-width:768px) and (max-width:1366px) {
+@use 'variables' as *;
+
+@media (min-width:768px) and (max-width:1336px) {
     *{
         box-sizing: border-box;
     }
-    
-    .content__swiper{
-        display: none;
-    }
-    
-    .grid__container{
+    .grid{
         display: block;
         padding-top: 32px;
     }
@@ -173,141 +170,3 @@
         opacity:0.6;
     }
 }   
-
-
-@media (min-width:1366px) and (max-width:4000px){
-   
-   
-    .navigation{
-    display: flex;
-    background-color: $main-color;
-   }
-   
-    .content{
-        display: flex; 
-    }
-
-    .grid__title{
-         display: flex;
-        align-items: center;
-        height: 80px;
-        padding-left: 16px;
-        border-top:1px solid $swiper-title-border;
-        font-weight:400;
-        font-size:16px;
-        line-height: 24px;
-        letter-spacing:-0.2px;
-        text-transform: uppercase;
-        color:$button-color;
-        background:$gradient;
-    }
-
-
-    .brands__wrapper{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        gap: 16px;
-        padding-top:16px;
-        padding-left: 16px;
-        padding-right:24px;
-        max-height:180px;
-        overflow: hidden;
-        transition: max-height 0.5s ease;
-    }
-
-    .brands__wrapper.show-brands {
-  max-height: 1000px;
-}
-
-
-
-    .logo-section{
-        display: flex;
-        width:60%;
-    }
-    .brands__icon{
-        display: flex;
-        align-items: center;
-        width: 224px;
-        height: 72px;
-        background-color: white;
-        padding-left: 16px;
-        border: 1px solid $line-color;
-        border-radius: 6px;
-    }
-    .brands__icon--arrow{
-        padding-left:16px;
-    }
-
-    .content__button--watch{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color:$main-color;
-        font-family: "TT Lakes";
-        font-weight:500;
-        font-size:16px;
-        line-height: 24px;
-        letter-spacing:-0.2px;
-        color:$text-color;
-    }
-
-        .devices__wrapper{
-            display:grid;
-            grid-template-columns:1fr 1fr 1fr 1fr;
-            padding:24px;
-            gap:24px;
-            max-height:190px;
-            overflow: hidden;
-            transition: max-height 0.5s ease;
-        }
-
-        .devices__wrapper.show-devices {
-        max-height: 1000px;
-        }
-
-        .devices{
-            width: 224px;
-            height: 160px;
-            background-color:white;
-            border: 1px solid $line-color;
-            border-radius: 6px;
-
-            &__icon--arrow{
-                width: 40px;
-                height:40px;
-                position:relative;
-                top:104px;
-                left:9px;
-            }
-
-            &__text{
-                font-weight: 500;
-                font-size: 16px;
-                line-height:24px;
-                letter-spacing:-0.2px;
-                padding-left:16px;
-                width:100%;
-            }
-        }
-
-    //Display none
-    .line,
-    .line--add,
-    .navigation__button--modal,
-    .navigation__logo--img{
-        display: none;
-    }
-
-    .navigation__button--modal{
-        display: none;
-    }
-
-    .add-buttons{
-        display: none;
-    }
-
-    .content__swiper{
-        display: none;
-    }
-}
