--- a/src/scss/down-container.scss
+++ b/src/scss/down-container.scss
@@ -2,9 +2,8 @@
 
 .down-container{
     font-family: "TT Lakes";
-    min-width: 288px;
-    min-height:191.98px;
     padding-left:16px;
+    padding-bottom:50px;
         display: flex;
         flex-direction: column;
 
