--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -1,172 +1,178 @@
 @use 'variables' as *;
 
-@media (min-width:768px) and (max-width:1336px) {
-    *{
-        box-sizing: border-box;
-    }
-    .grid{
-        display: block;
-        padding-top: 32px;
-    }
-
-    .grid__title{
-         display: flex;
-        align-items: center;
-        height: 80px;
-        padding-left: 16px;
-        border-top:1px solid $swiper-title-border;
-        font-weight:400;
-        font-size:16px;
-        line-height: 24px;
-        letter-spacing:-0.2px;
-        text-transform: uppercase;
-        color:$button-color;
-        background:$gradient;
-    }
-
-
-    .brands__wrapper{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 16px;
-        padding-top:16px;
-        padding-left: 16px;
-        padding-right:24px;
-        max-height:180px;
-        overflow: hidden;
-        transition: max-height 0.5s ease;
-    }
-
-    .brands__wrapper.show-brands {
-  max-height: 1000px;
+.grid {
+  display: none;
 }
 
+table{
+    display: none;
+}
 
+@media (min-width: 768px) and (max-width: 1336px) {
+  * {
+    box-sizing: border-box;
+  }
+  .grid {
+    display: block;
+    padding-top: 32px;
+  }
 
-    .logo-section{
-        display: flex;
-        width:60%;
-    }
-    .brands__icon{
-        display: flex;
-        align-items: center;
-        width: 224px;
-        height: 72px;
-        background-color: white;
-        padding-left: 16px;
-        border: 1px solid $line-color;
-        border-radius: 6px;
-    }
-    .brands__icon--arrow{
-        padding-left:16px;
-    }
+  .grid__title {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    padding-left: 16px;
+    border-top: 1px solid $swiper-title-border;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    text-transform: uppercase;
+    color: $button-color;
+    background: $gradient;
+  }
 
-    .content__button--watch{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color:$main-color;
-        font-family: "TT Lakes";
-        font-weight:500;
-        font-size:16px;
-        line-height: 24px;
-        letter-spacing:-0.2px;
-        color:$text-color;
-    }
+  .brands__wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 16px;
+    padding-top: 16px;
+    padding-left: 16px;
+    padding-right: 24px;
+    max-height: 180px;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+  }
 
-        .devices__wrapper{
-            display:grid;
-            grid-template-columns:1fr 1fr 1fr;
-            padding:24px;
-            gap:24px;
-            max-height:190px;
-            overflow: hidden;
-            transition: max-height 0.5s ease;
-        }
+  .brands__wrapper.show-brands {
+    max-height: 1000px;
+  }
 
-        .devices__wrapper.show-devices {
-        max-height: 1000px;
-        }
+  .logo-section {
+    display: flex;
+    width: 60%;
+  }
+  .brands__icon {
+    display: flex;
+    align-items: center;
+    width: 224px;
+    height: 72px;
+    background-color: white;
+    padding-left: 16px;
+    border: 1px solid $line-color;
+    border-radius: 6px;
+  }
+  .brands__icon--arrow {
+    padding-left: 16px;
+  }
 
-        .devices{
-            width: 224px;
-            height: 160px;
-            background-color:white;
-            border: 1px solid $line-color;
-            border-radius: 6px;
+  .content__button--watch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $main-color;
+    font-family: 'TT Lakes';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    color: $text-color;
+  }
 
-            &__icon--arrow{
-                width: 40px;
-                height:40px;
-                position:relative;
-                top:104px;
-                left:9px;
-            }
+  .devices__wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    padding: 24px;
+    gap: 16px;
+    max-height: 190px;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+  }
 
-            &__text{
-                font-weight: 500;
-                font-size: 16px;
-                line-height:24px;
-                letter-spacing:-0.2px;
-                padding-left:16px;
-                width:100%;
-            }
-        }
+  .devices__wrapper.show-devices {
+    max-height: 1000px;
+  }
 
-        table{
-            width:95%;
-            height: 324px;
-            margin-left:24px;
-            border-collapse: collapse;
-        }
+  .devices {
+    width: 224px;
+    height: 160px;
+    background-color: white;
+    border: 1px solid $line-color;
+    border-radius: 6px;
 
-        th{
-            text-align: left;
-            padding:31px 0 16px 16px;
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 16px;
-            color: $button-color;
-        }
-
-        tbody{
-            background-color: #ffffff;
-            border-radius:6px;
-        }
-        
-        td{
-            padding-left:16px;
-            font-weight: 400;
-            font-size:14px;
-            line-height:18px;
-            letter-spacing:0.2px;
-            color: $text-color;
-        }
-
-        .button--order{
-        width:119px;
-        height: 32px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color:#FF3E79;
-        border-radius: 16px;
-        gap:8px;
-        color: #ffffff;
-        padding: 16px 16px 16px 20px;
+    &__icon--arrow {
+      width: 40px;
+      height: 40px;
+      position: relative;
+      top: 104px;
+      left: 9px;
     }
 
-    .brands__button,
-    .devices__button{
-        background-color:$main-color;
-        display: flex;
-        align-items: center;
-        padding-bottom:32px;
-        padding-top:24px;
+    &__text {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 24px;
+      letter-spacing: -0.2px;
+      padding-left: 16px;
+      width: 100%;
     }
+  }
 
-    button:hover,
-    button:focus{
-        opacity:0.6;
-    }
-}   
+  table {
+    display: block;
+    min-width: 720px;
+    height: auto;
+    margin-left: 24px;
+    border-collapse: collapse;
+  }
+
+  th {
+    text-align: left;
+    padding: 31px 0 16px 16px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    color: $button-color;
+  }
+
+  tbody {
+    background-color: #ffffff;
+    border-radius: 6px;
+  }
+
+  td {
+    padding-left: 16px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.2px;
+    color: $text-color;
+  }
+
+  .button--order {
+    width: 119px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ff3e79;
+    border-radius: 16px;
+    gap: 8px;
+    color: #ffffff;
+    padding: 16px 16px 16px 20px;
+  }
+
+  .brands__button,
+  .devices__button {
+    background-color: $main-color;
+    display: flex;
+    align-items: center;
+    padding-bottom: 32px;
+    padding-top: 24px;
+  }
+
+  button:hover,
+  button:focus {
+    opacity: 0.6;
+  }
+}
