--- a/src/scss/down-container.scss
+++ b/src/scss/down-container.scss
@@ -3,6 +3,7 @@
 .down-container{
     font-family: "TT Lakes";
     padding-left:16px;
+    padding-top:32px;
     padding-bottom:50px;
         display: flex;
         flex-direction: column;
