--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,8 +6,8 @@
 @use 'services' as *;
 @use 'swipers-style';
 @use 'down-container';
-@use 'footer';
 @use 'media';
+@use 'footer';
 @use 'modal';
 
 
@@ -122,6 +122,8 @@ li {
   }
 }
 
-.button__text--add {
-    display: none;
+  @media (min-width:1336px) {
+    nav{
+        display: none;
+    }
   }
