--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,7 +10,9 @@
 @use 'footer';
 @use 'modal';
 
-
+*{
+  //outline:2px solid black;
+}
 
 body {
   min-width: 320px;
@@ -19,6 +21,11 @@ body {
   margin: 0;
   padding: 0;
   background-color: $main-color;
+}
+
+.rotate {
+  transform: rotate(180deg);
+  transition: transform 0.3s ease;
 }
 
 nav {
