--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -134,7 +134,6 @@
   .content__text--second,
  .content__text--tridth{
       display:block;
-
     }
 
   .button__section--add {
@@ -279,6 +278,45 @@
     padding-bottom: 32px;
     padding-top: 24px;
   }
+
+      table {
+        padding-left:16px;
+        padding-right:24px;
+    display: block;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+td,th{
+  padding:16px;
+  width:100vh;
+  padding-left:24px;
+}
+
+td{
+  background-color: white;
+  margin-left:24px;
+
+}
+
+
+tbody tr {
+  position: relative;
+}
+
+tbody tr::after {
+  content: '';
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  bottom: 0;
+  height: 1px;
+  background-color:$main-color;
+}
+
+tbody tr:last-child::after {
+  display: none;
+}
 
   button:hover,
   button:focus {
